work report update and swageer new api add
