# src/api.yaml
@@ -1535,14 +1535,16 @@ paths:
           description: the user id or empty
         - in: query
           name: startDate
+          required : true
+          description: This date format is YYYY-MM-DD.
           schema:
             type: string
-          description: start date
         - in: query
           name: endDate
+          required : true
+          description: This date format is YYYY-MM-DD.
           schema:
             type: string
-          description: end date
           
         responses:
           '200':
@@ -2151,7 +2153,7 @@ paths:
           '500':
             description: Server error.
 
-# get holiday
+# get 
       get:
           tags:
           -  user role
@@ -2175,7 +2177,7 @@ paths:
             '500':
               description: Server error.
 
-# check department
+# check 
   paths:
   /api/role/name:
       post:
@@ -2211,83 +2213,238 @@ paths:
             description: Access Denied.
 
 
+#  -------------------------------------------  project api -------------------------------------- #
+# get 
+  paths:
+  /api/project:
+      get:
+        tags:
+         -  Project
+        security:
+        - token: []
+        summary: list project.   
+          
+        responses:
+          '200':
+            description: Success message. 
+          '401':
+            description:  Unauthorized.
+          '403':
+            description: Access Denied.
+          '500':
+            description: Server error.
+# add
+      post:
+        tags:
+          - Project
+        security:
+        - token: []
+        summary: add project name.        
+        post:
+        requestBody:
+          required: true
+          content:
+            # multipart/form-data:
+            application/json:
+              schema:
+                properties: 
+                  name:       
+                    type: string
+                    example : ""
+                required:
+                  - name
+          
+        responses: 
+          '201':
+            description: created sucess. 
+          '400':
+            description: Bad Request.
+          '401':
+            description:  Unauthorized.
+          '500':
+            description: Server error.
+
+# update  api
+ 
+  paths:
+  /api/project/{id}:
+      patch:
+        tags:
+          -  Project
+        security:
+        - token: []
+        summary: update project name.
+        parameters:
+        - name: id
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.        
+        patch:
+        requestBody:
+          required: true
+          content:
+          # multipart/form-data:
+            application/json:
+              schema:
+                properties: 
+                  name:       
+                    type: string
+                    example : ""
+                required:
+                  - name
+          
+        responses:
+          '200':
+            description: created sucess. 
+          '400':
+            description: Bad Request.
+          '404':
+            description: Not Found.
+          '403':
+            description: Access Denied.
+          '401':
+            description:  Unauthorized.
+          '500':
+            description: Server error.
 
 
 
+#  -------------------------------------------  report api -------------------------------------- #
+# get 
+  paths:
+  /api/report:
+      get:
+        tags:
+         -  work report
+        security:
+        - token: []
+        summary: list work report.   
+        parameters:
+        - in: query
+          name: id
+          schema:
+            type: string
+          description: the user id or empty
+        - in: query
+          name: startDate
+          required : true
+          description: This date format is YYYY-MM-DD.
+          schema:
+            type: string
+          description: start date
+        - in: query
+          name: endDate
+          required : true
+          description: This date format is YYYY-MM-DD.
+          schema:
+            type: string
+          description: end date
 
-  # paths:
-  # /api/user:
-  #   post:
-  #     tags:
-  #       - Add user
-  #     security:
-  #      - token: []
-  #     summary: Returns a user list. 
-  #     # description: <b> Request :- </b> <br /> <br />
-  #     #         <b> page_no* </b>  is required <br /> 
-  #     #         <b> status* </b>  is required <br /> 
-  #     #         <b> type* </b>  is required <br /> 
+        responses:
+          '200':
+            description: Success message. 
+          '401':
+            description:  Unauthorized.
+          '403':
+            description: Access Denied.
+          '500':
+            description: Server error.
+# add
+      post:
+        tags:
+          - work report
+        security:
+        - token: []
+        summary: add work report.        
+        post:
+        requestBody:
+          required: true
+          content:
+            # multipart/form-data:
+            application/json:
+              schema:
+                properties: 
+                  userId:       
+                    type: string
+                    example : ""
+                  projectId:       
+                    type: string
+                    example : ""
+                  description:       
+                    type: string
+                    example : ""
+                  hours:       
+                    type: integer
+                    example : 1
+                required:
+                  -  userId
+                  -  projectId
+                  -  description
+                  -  hours
+          
+        responses: 
+          '201':
+            description: created sucess. 
+          '400':
+            description: Bad Request.
+          '401':
+            description:  Unauthorized.
+          '500':
+            description: Server error.
 
-    
-  #     #   - in: query
-  #     #     name: month_year
-  #     #     schema:
-  #     #       #type: integer
-  #     #       example: 2022-10        
-  #     post:
-  #     requestBody:
-  #       required: true
-  #       content:
-  #         # multipart/form-data:
-  #          application/json:
-  #           schema:
-  #             properties: 
-  #               employee_id:         
-  #                 type: String
-  #               first_name:       
-  #                 type: string
-  #               last_name:       
-  #                 type: string
-  #               email:       
-  #                 type: string
-  #               password:       
-  #                 type: string
-  #               phone:
-  #                 type: integer
-  #               report_by:       
-  #                 type: string
-  #               role_id:       
-  #                 type: string
-  #               department_id:       
-  #                 type: string
-  #               designation_id:   
-  #                 type: string
-  #               joining_date:       
-  #                   type: string
-  #                   format: date
-  #               status:
-  #                   type: "string"
-  #                   enum: ['Active', 'Inactive']
-  #             required:
-  #               - employee_id
-  #               - first_name
-  #               - last_name
-  #               - email
-  #               - phone
-  #               - report_by
-  #               - joining_date
-  #               - status
-  #               - password
-  #               - role_id
-  #               - department_id
-  #               - designation_id
-         
-  #     responses:
-  #       '201':
-  #         description: Success message. 
-  #       '400':
-  #         description: Bad Request.
-  #       '500':
-  #         description: Server error.
-  
+# update  api
+ 
+  paths:
+  /api/report/{id}:
+      patch:
+        tags:
+          -  work report
+        security:
+        - token: []
+        summary: update work report.
+        parameters:
+        - name: id
+          required: true
+          in: path
+          description: Parameter description in CommonMark or HTML.        
+        patch:
+        requestBody:
+          required: true
+          content:
+          # multipart/form-data:
+            application/json:
+              schema:
+                properties: 
+                  userId:       
+                    type: string
+                    example : ""
+                  projectId:       
+                    type: string
+                    example : ""
+                  description:       
+                    type: string
+                    example : ""
+                  hours:       
+                    type: integer
+                    example : 1
+                required:
+                  -  userId
+                  -  projectId
+                  -  description
+                  -  hours
+          
+        responses:
+          '200':
+            description: created sucess. 
+          '400':
+            description: Bad Request.
+          '404':
+            description: Not Found.
+          '403':
+            description: Access Denied.
+          '401':
+            description:  Unauthorized.
+          '500':
+            description: Server error.
+
   
